repos/makepy/contents/test/fail/ImportRecursive1.rules
import . file ImportRecursive2.rules

all:
